# cat-mip

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  lint_catmip.py  pyproject.toml  terms.json
.github/workflows/: json-to-pdf.yml  lint.yml
docs/: CONTRIBUTING.md  LINTER.md
docs/mcp-spec/: llms-full_2025-06-18.txt
scripts/: json_to_pdf.py
